Fixing footer alignment

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -25,6 +25,7 @@
 .footer-section p {
   font-size: 1.2rem;
   margin-bottom: 10px;
+  margin-top: 20px;
   justify-content: center;
   display: flex;
 }
@@ -54,6 +55,13 @@
   margin-bottom: 10px;
   justify-content: center;
   display: flex;
+}
+
+.footer-section i {
+  font-size: 45px;
+  color: #007bff;
+  margin-top: 30px;
+  justify-content: center;
 }
 
 .footer-section ul li a:hover {
